# SimpleEditorC

./: CMakeLists.txt  README.md  main.c
